# Example-streams-subscriber

./: Cargo.toml  README.md  config.json
src/: lib.rs  main.rs
src/streams_subscriber/: mod.rs  subscriber.rs
